website/docs/v0.17.0/en/concepts/page-context.mdx
---
title: Page Context fields and lifecycle
description: Understand how Test Kit derives bounded page context from rendered DOM, accessibility semantics, component boundaries, geometry, and browser-computed UI evidence.
---

:::warning Release candidate
v0.17.0 is staged on main but not published. Installation examples remain pinned to v0.16.2 until the release gate is intentionally advanced.
:::

# Page Context fields and lifecycle

Page Context is a bounded fact record that Test Kit derives after the browser renders. It adds component ownership, source hints, stable locators, multi-space geometry, and UI-understanding evidence, then binds them to the browser accessibility snapshot as one observation.

Test Kit is an enhancement. Without it, A3S Test can still execute Web actions, assertions, and evidence capture from browser accessibility semantics. Add Page Context when a workflow needs components, geometry, a layout graph, rendered style evidence, or human marking.

## How three browser fact sources work together

```text
browser completes style and layout
        |
        +--> accessibility snapshot   roles, names, native state
        |
        +--> Page Context             components, locators, geometry, facts
        |
        +--> UI understanding         style, layout, clusters, state, motion
                                  |
                                  v
                    one observation and page revision
```

| Source                  | Best question to answer                                      | Fact it cannot replace                                   |
| ----------------------- | ------------------------------------------------------------ | -------------------------------------------------------- |
| Accessibility snapshot  | Which controls can a user understand and operate?            | Component source, full layout, and visual style          |
| Page Context            | Which component owns a node, where is it, how is it located? | Whether product requirements or model advice are correct |
| UI understanding        | How do current layout, style, state, and motion render?      | Accessibility semantics, verdicts, and repair authority  |
| A3S Test evidence layer | What actually appeared after an action?                      | Application-declared boundaries and product facts        |

UI understanding is an optional record nested inside Page Context. It does not create another accessibility tree and does not infer component types from class names.

## What the bridge exposes

The page exposes a non-enumerable, Symbol-addressed `a3s.test.page-context/1` bridge. Application code normally mounts the provider and lets the A3S Test browser driver probe and read snapshots. Framework-neutral access remains available for development inspection and custom integration.

```ts
import { getPageContextBridge } from '@a3s-lab/testkit';

const bridge = getPageContextBridge();
if (!bridge) throw new Error('Test Kit is not enabled');

const summary = bridge.snapshot({
  detail: 'summary',
  scope: { kind: 'page' },
  limits: { nodes: 300, uiNodes: 120 },
});

const nextRevision = await bridge.waitForChange(summary.revision, 5_000);
```

| Method                        | Result or operation                                                     |
| ----------------------------- | ----------------------------------------------------------------------- |
| `probe()`                     | Protocol, SDK version, and capabilities                                 |
| `snapshot(request)`           | A bounded snapshot on the current revision                              |
| `resolve(nodeId)`             | The live DOM node for a current private ID, within the same-page bridge |
| `waitForChange(revision, ms)` | Wait for the semantic revision to advance, or return `null` on timeout  |
| `subscribe(listener)`         | Subscribe to revision, quality, design-advice, and repair events        |
| `dispose()`                   | Remove observers, listeners, portals, and private state                 |

The bridge exposes no `eval`, cookies, browser storage, arbitrary network request, filesystem, or shell access.

## Choose a snapshot for the task

### Detail levels

| `detail`   | Use                                                                                         |
| ---------- | ------------------------------------------------------------------------------------------- |
| `summary`  | Regular observation with principal semantics, components, locators, and bounded UI evidence |
| `scoped`   | Inspect one node, component, or region without unrelated page context                       |
| `diff`     | Combine with `sinceRevision` to inspect changes between revisions                           |
| `forensic` | Repair verification or design review with the fullest admitted record                       |

### Scopes

| `scope.kind` | Required fields                        | Typical use                                     |
| ------------ | -------------------------------------- | ----------------------------------------------- |
| `page`       | None                                   | Page-level observation                          |
| `node`       | `nodeId`                               | Inspect one current snapshot node               |
| `component`  | `componentId`                          | Inspect roots, descendants, and component facts |
| `region`     | Space, `x`, `y`, `width`, and `height` | Inspect a viewport or document rectangle        |

A scope can refer only to private identities on the current revision. A3S Test projects those identities as observation-bound `@cN` refs. Callers must not persist raw `nodeId` values.

## Snapshot fields

Every response contains `protocol`, `sdkVersion`, `revision`, `page`, `components`, `nodes`, `facts`, optional `ui`, `removedNodeIds`, `truncated`, and `nextCursor`.

### Page fields

| Path                   | Meaning                                                                  |
| ---------------------- | ------------------------------------------------------------------------ |
| `page.id`              | Stable page ID declared at integration                                   |
| `page.url` and `route` | Current full URL and route                                               |
| `page.ready`           | Current readiness from the provider and component boundaries             |
| `page.viewport`        | Layout viewport dimensions, DPR, and optional visual viewport            |
| `page.document`        | Current document dimensions                                              |
| `page.scroll`          | Current document scroll offsets                                          |
| `page.language`        | Current `<html lang>`                                                    |
| `page.theme`           | `light`, `dark`, or `unknown` from an explicit declaration or preference |

### Component fields

`A3STestBoundary` can add the following records.

| Field      | Content                                                                  |
| ---------- | ------------------------------------------------------------------------ |
| `id`       | Project-declared component identity                                      |
| `name`     | A component name understandable by people and agents                     |
| `parentId` | Optional parent component                                                |
| `source`   | Optional file, line, and column hint with no file-edit authority         |
| `ready`    | Whether the component has completed its current render                   |
| `facts`    | Explicit JSON product facts after depth, key, string, and byte admission |
| `boxes`    | One or more real root rectangles, without inventing one multi-root box   |

Boundaries are optional. Automatic DOM, open Shadow DOM, semantics, locator, and geometry collection still run without `A3STestBoundary`.

### Node fields

| Field            | Content                                                                           |
| ---------------- | --------------------------------------------------------------------------------- |
| `id`, `parentId` | Private relationships valid only on the current bridge revision                   |
| `componentId`    | Explicit component boundary that owns the node                                    |
| `tag`            | DOM tag                                                                           |
| `role`, `name`   | Accessible role and name                                                          |
| `text`           | Visible text after length bounds and redaction                                    |
| `state`          | visible, disabled, checked, selected, expanded, focused, and related state        |
| `locators`       | Ordered semantic and CSS candidates                                               |
| `geometry`       | Three coordinate spaces, visibility, occlusion, positioning, and scroll container |
| `computedStyles` | Bounded styles only at admitted detail and budget                                 |

Locator candidates prefer role and name, label, test ID, placeholder, text, and CSS in that order. Geometry is evidence and a final fallback, not a reason to skip semantic targeting.

## Geometry and zoom

Each node with a rendered box can contain three rectangles.

| Space        | Derivation                                      | Useful for                                              |
| ------------ | ----------------------------------------------- | ------------------------------------------------------- |
| `viewport`   | CSS pixels from `getBoundingClientRect()`       | Current viewport hit-testing and screenshot correlation |
| `document`   | Viewport rectangle plus current document scroll | Comparing a stable page location across scrolling       |
| `normalized` | Ratios against the current visual viewport      | Correlating the zoomed image in one observation         |

Normalized values may be below 0 or above 1 when a box lies outside the visible zoomed region. `page.viewport.width` and `height` always describe layout-viewport CSS pixels. DPR and optional visual-viewport offset, size, and scale remain separate, so CSS pixels are never multiplied into device pixels.

Geometry also records `visibleRatio`, `occluded`, `position`, `transformed`, and the nearest `scrollContainerNodeId`. Fixed and sticky nodes retain their real positioning. Multi-root components use `boxes` instead of an invented union rectangle.

## UI-understanding record

`a3s.test.ui-understanding/1` contains visual facts that the browser has already computed.

| Block        | Evidence                                                                                                                      |
| ------------ | ----------------------------------------------------------------------------------------------------------------------------- |
| `style`      | Colors, typography, spacing, radii, shadows, z-index, safe root custom properties, and same-origin responsive conditions      |
| `layout`     | Flex, Grid, normal flow, order, client and scroll extents, per-axis overflow and clipping, box model, and graph relations     |
| `components` | Deterministic repeated-structure fingerprints from tag, role, stable semantic state, bounded subtree shape, and style summary |
| `stateDiffs` | Naturally observed hover, focus, focus-visible, checked, expanded, selected, and disabled differences                         |
| `motion`     | Transitions, CSS and Web Animations, keyframes, document, scroll, view, named timelines, and animation ranges                 |

Layout nodes keep physical margin, border-width, and padding edges separate from `boxSizing`, `writingMode`, and `direction`. Those fields report browser results without inferring logical layout intent.

The UI record has its own `observationId`. Focus, hover, or a running animation may change computed state without advancing the semantic page revision. Its `pageRevision`, viewport, and scope must still exactly match the containing Page Context record.

Repeated structures never treat class names as component truth. State collection does not move focus or dispatch events. Cross-origin stylesheet rules remain inaccessible under browser policy and only increment `inaccessibleStyleSheets`.

## Revisions and public refs

MutationObserver, ResizeObserver, route, viewport, scroll, and relevant form changes invalidate the cache and advance a monotonic revision. An unchanged page is not polled.

A3S Test atomically binds the browser accessibility snapshot to the Test Kit revision. If the page changes while that observation is being assembled, the driver rejects the race and requires another observation.

| Ref   | Source                                | Lifetime and authority                                                              |
| ----- | ------------------------------------- | ----------------------------------------------------------------------------------- |
| `@eN` | Browser accessibility snapshot        | Actionable in the current observation and stale after change                        |
| `@cN` | Uniquely actionable Page Context node | Actionable in the current observation with component, locator, and geometry binding |
| `@uN` | Supplemental UI-understanding node    | Read-only in the current observation and never an action target                     |

Observe again after navigation, hot reload, or dynamic rearrangement. A3S Test rejects `@uN` during ACL admission or before driver dispatch and also rejects `@eN` or `@cN` from an older observation.

## Budgets, truncation, and pagination

Installation options set ceilings. Each `snapshot()` request may only lower them.

| Budget               | Default | Hard ceiling |
| -------------------- | ------- | ------------ |
| Page Context nodes   | 500     | 5,000        |
| Bytes per string     | 4 KiB   | 16 KiB       |
| Encoded Page Context | 1 MiB   | 8 MiB        |
| UI sampled nodes     | 200     | 1,000        |
| UI state candidates  | 200     | 1,000        |
| UI capture duration  | 32 ms   | 100 ms       |
| Encoded UI record    | 256 KiB | 1 MiB        |

When a response returns `truncated: true`, inspect `nextCursor` and continue on the same revision and scope. A cursor is bound to both and cannot be reused after the page changes.

The UI record has its own `budget.used`, truncation flag, and reasons. If UI projection cannot preserve graph integrity within its encoded budget, A3S Test omits that optional record and keeps the outer semantic observation. It never returns broken edges, cyclic containment, or a leaked private identity to fit a budget.

Use `snapshot({ ui: false })` when one request does not need UI evidence. Set `uiUnderstanding={false}` when an installation never needs the projection.

## Privacy and host boundaries

The runtime never serializes the following data.

- Password or hidden input values.
- Cookies, localStorage, sessionStorage, request headers, or tokens.
- Arbitrary React, Vue, or Svelte props, state, fibers, closures, or internals.
- Text covered by a configured `redact` selector.
- Cross-origin frame content or stylesheet rules.
- Full computed styles in summary mode.

Private node IDs live in a `WeakMap` side table. Test Kit does not write IDs, coordinates, component ownership, or source paths into application DOM attributes. `facts` accepts only JSON values explicitly returned by the application and applies the same depth, key, string, and encoded-size bounds.

## Troubleshooting

| Symptom                          | Likely cause                                                       | Action                                                                                 |
| -------------------------------- | ------------------------------------------------------------------ | -------------------------------------------------------------------------------------- |
| `getPageContextBridge()` is null | Provider disabled, SSR, or already unmounted                       | Call only in the browser and pass `enabled={true}` explicitly                          |
| Component has no `source`        | No boundary or no source hint                                      | Add `A3STestBoundary`; keep source as a hint, not authority                            |
| Snapshot expires immediately     | Loading, animation, or hot reload keeps changing the page          | Wait for `page.ready`, observe again, and do not reuse refs                            |
| Shadow DOM node is missing       | Its Shadow Root is closed                                          | Use an open root or expose necessary context through semantics and a boundary          |
| `truncated` remains true         | Page exceeds installation or request budgets                       | Narrow scope, reduce detail, paginate, or raise the installation ceiling with evidence |
| UI understanding is absent       | Request disabled it, installation disabled it, or admission failed | Inspect UI configuration and budgets; outer Page Context remains usable                |
| A `@cN` action is rejected       | The ref is stale or no longer uniquely actionable                  | Observe again and prefer a fresh semantic locator                                      |

Continue with [Add Web Test Kit](../guide/testkit.mdx) for integration or [Human review and repair](../guide/repairs.mdx) to see how Page Context accompanies an explicitly submitted finding into verification.
